--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <script src="app/lib/angular/angular.min.js"></script>
         <script src="app/lib/angular-resource/angular-resource.js"></script>
         <script src="app/main.js"></script>
+        <script src="app/service/Topics.js"></script>
         <script src="app/controller/BaseCtrl.js"></script>
     </body>
 </html>
