--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
         <div class="main-container">
             <div ng-controller="BaseCtrl" class="main wrapper clearfix">
 
-                <article id="cloud">
-                </article>
-
-                <aside class="hidden">
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-                </aside>
+                <article id="cloud" word-cloud></article>
+                <aside class="hidden"></aside>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -40,10 +35,13 @@
         <!-- SCRIPTS -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/lib/jquery/dist/jquery.min.js"><\/script>')</script>
+        <script src="app/lib/underscore/underscore-min.js"></script>
         <script src="app/lib/angular/angular.min.js"></script>
         <script src="app/lib/angular-resource/angular-resource.js"></script>
         <script src="app/main.js"></script>
+        <script src="app/service/Base.js"></script>
         <script src="app/service/Topics.js"></script>
+        <script src="app/directive/WordCloud.js"></script>
         <script src="app/controller/BaseCtrl.js"></script>
     </body>
 </html>
