Sentiment score rule

--- a/tpl/description.html
+++ b/tpl/description.html
@@ -1,4 +1,4 @@
-<h2>{{ topic.label }}<h2>
+<h2>Informations on topic "{{ topic.label }}"<h2>
 <div>Total mentions: {{ topic.volume || 0 }}</div>
 <div>Positive mentions: {{ topic.sentiment.positive || 0 }}</div>
 <div>Neutral mentions: {{ topic.sentiment.neutral || 0 }}</div>
