--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <article id="cloud">
                     <ul word-cloud></ul>
                 </article>
-                <aside class="hidden" description></aside>
+                <aside ng-show="currentTopic" description></aside>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -41,7 +41,6 @@
         <script src="app/lib/angular/angular.min.js"></script>
         <script src="app/lib/angular-resource/angular-resource.js"></script>
         <script src="app/main.js"></script>
-        <script src="app/model/Topics.js"></script>
         <script src="app/service/Base.js"></script>
         <script src="app/service/Topics.js"></script>
         <script src="app/directive/Tag.js"></script>
