--- a/tpl/wordcloud.html
+++ b/tpl/wordcloud.html
@@ -1,1 +1,1 @@
-<li ng-repeat="topic in topics"><a href="#" data-id="{{ topic.id }}" tag>{{ topic.label }}</a></li>
+<li ng-repeat="topic in topics"><a href="#" data-id="{{ topic.id }}" class="tag" tag>{{ topic.label }}</a></li>
