--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <script src="app/directive/Tag.js"></script>
         <script src="app/directive/Description.js"></script>
         <script src="app/directive/WordCloud.js"></script>
+        <script src="app/controller/TagCtrl.js"></script>
         <script src="app/controller/BaseCtrl.js"></script>
     </body>
 </html>
