More grunt tasks

--- a/debug.html
+++ b/debug.html
@@ -40,6 +40,13 @@
         <script src="app/lib/underscore/underscore-min.js"></script>
         <script src="app/lib/angular/angular.min.js"></script>
         <script src="app/lib/angular-resource/angular-resource.js"></script>
-        <script src="build/wordcloud.min.js"></script>
+        <script src="app/main.js"></script>
+        <script src="app/service/Base.js"></script>
+        <script src="app/service/Topics.js"></script>
+        <script src="app/directive/Tag.js"></script>
+        <script src="app/directive/Description.js"></script>
+        <script src="app/directive/WordCloud.js"></script>
+        <script src="app/controller/TagCtrl.js"></script>
+        <script src="app/controller/BaseCtrl.js"></script>
     </body>
 </html>
